--- a/mytravel/pubspec.yaml
+++ b/mytravel/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_staggered_animations: ^1.1.1
-  smooth_page_indicator: ^1.2.0+3
-  introduction_screen: ^3.1.16
+  smooth_page_indicator: ^1.2.1
+  introduction_screen: ^3.1.17
   shared_preferences: ^2.5.2
 
 dev_dependencies:
