--- a/mytravel/pubspec.yaml
+++ b/mytravel/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.5.2
   font_awesome_flutter: ^10.8.0
   http: ^1.3.0
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
 
 dev_dependencies:
   flutter_test:
